--- a/src/main/resources/templates/allRestaurants.html
+++ b/src/main/resources/templates/allRestaurants.html
@@ -88,10 +88,10 @@
         const restaurantElement = document.createElement('div');
         restaurantElement.classList.add('restaurant-item');
         restaurantElement.innerHTML = `
-          <p><strong>이름:</strong> ${restaurant.name}</p>
-          <p><strong>카테고리:</strong> ${restaurant.category}</p>
-          <p><strong>주소:</strong> ${restaurant.address}</p>
-        `;
+        <p><strong>이름:</strong> ${restaurant.name}</p>
+        <p><strong>카테고리:</strong> ${restaurant.category}</p>
+        <p><strong>주소:</strong> ${restaurant.address}</p>
+      `;
         restaurantsList.appendChild(restaurantElement);
       });
 
@@ -103,7 +103,7 @@
       updatePaginationButtons();
 
       const totalCount = document.getElementById('totalCount');
-      totalCount.textContent = `총 음식점 수: ${data.data.totalElements}`;
+      totalCount.textContent = `총 음식점 수: ${data.data.totalElements}`;  // 총 요소 수 업데이트
     })
     .catch(error => console.error('Error fetching data:', error));
   }
