--- a/src/main/resources/templates/allRestaurants.html
+++ b/src/main/resources/templates/allRestaurants.html
@@ -44,12 +44,31 @@
       font-size: 14px;
       color: #555;
     }
+
+    .category-input {
+      margin: 10px;
+    }
   </style>
 </head>
 <body>
 <div class="container" id="content" style="display: none;">
   <h1>음식점 전체 조회</h1>
   <div class="total-count" id="totalCount">총 음식점 수: 0</div>
+
+  <!-- 카테고리 선택 UI -->
+  <div class="category-input">
+    <label for="categorySelect">카테고리 선택: </label>
+    <select id="categorySelect">
+      <option value="">전체</option>
+      <option value="한식">한식</option>
+      <option value="일식">일식</option>
+      <option value="중식">중식</option>
+      <option value="양식">양식</option>
+      <option value="기타">기타</option>
+    </select>
+    <button onclick="updateCategory()">적용</button>
+  </div>
+
   <div class="size-input">
     <label for="sizeInput">페이지 당 음식점 수: </label>
     <input type="number" id="sizeInput" min="1" value="5">
@@ -65,16 +84,16 @@
   </div>
 </div>
 
-<!-- 필요한 JavaScript 파일 -->
 <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
 <script>
   let currentPage = 1;
   let totalPages = 1;
   let pageSize = 5;
+  let selectedCategory = '';
 
-  function getRestaurants(page, size) {
-    fetch(`/v1/admin/restaurants?page=${page - 1}&size=${size}`, {
+  function getRestaurants(page, size, category) {
+    fetch(`/v1/admin/restaurants?page=${page - 1}&size=${size}&category=${category}`, {
       method: 'GET',
       credentials: 'same-origin',
     })
@@ -110,20 +129,26 @@
 
   function prevPage() {
     if (currentPage > 1) {
-      getRestaurants(currentPage - 1, pageSize);
+      getRestaurants(currentPage - 1, pageSize, selectedCategory);
     }
   }
 
   function nextPage() {
     if (currentPage < totalPages) {
-      getRestaurants(currentPage + 1, pageSize);
+      getRestaurants(currentPage + 1, pageSize, selectedCategory);
     }
   }
 
   function updateSize() {
     const sizeInput = document.getElementById('sizeInput').value;
     pageSize = parseInt(sizeInput) || pageSize;
-    getRestaurants(currentPage, pageSize);
+    getRestaurants(currentPage, pageSize, selectedCategory);
+  }
+
+  function updateCategory() {
+    const categorySelect = document.getElementById('categorySelect').value;
+    selectedCategory = categorySelect;
+    getRestaurants(currentPage, pageSize, selectedCategory);
   }
 
   document.addEventListener('DOMContentLoaded', () => {
@@ -136,7 +161,7 @@
       success: function (response) {
         if (response.data === "OJM Auth") {
           $('#content').show();
-          getRestaurants(currentPage, pageSize);
+          getRestaurants(currentPage, pageSize, selectedCategory);
         } else {
           window.location.href = `${host}/login.html`;
         }
